Render section properties
- Added a titled pane to show bytes